Bug 361758 - git master crashes on update
Summary: git master crashes on update
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-04-14 09:22 UTC by Harald Sitter
Modified: 2016-04-14 14:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2016-04-14 09:22:34 UTC
Application: plasma-discover (5.6.90)
 (Compiled from sources)
Qt Version: 5.6.0
Frameworks Version: 5.21.0
Operating System: Linux 4.4.0-18-generic x86_64
Distribution: KDE neon on 16.04

-- Information about the crash:
- What I was doing when the application crashed:

- go to update 'tab' of discover
- menu -> advanced -> check for update
- immediately after: triggered an actual update
- only a short while into the update discover crashes

I'd guess that the update check came back but discover didn't expect it. Random note of the day: checking did not lock the UI, it might well be that if discover blocked updates until the check transaction came back the crash would not have happened. Not checking for updates first seems to not crash, certainly not as reliable anyway.

The crash can be reproduced every time.

-- Backtrace:
Application: Discover (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fcb235c88c0 (LWP 21510))]

Thread 8 (Thread 0x7fcb20627700 (LWP 21511)):
#0  0x00007fcb2d7ca5ad in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fcb28c7ac62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007fcb28c7c8d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007fcb231af1e9 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007fcb2e1d0da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fcb2c5976fa in start_thread (arg=0x7fcb20627700) at pthread_create.c:333
#6  0x00007fcb2d7d62dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7fcb17df5700 (LWP 21512)):
#0  0x00007fcb2d7ca5ad in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fcb2a67131c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fcb2a67142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fcb2e3f94ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fcb2e3a215a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fcb2e1cbf94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fcb2b626375 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007fcb2e1d0da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fcb2c5976fa in start_thread (arg=0x7fcb17df5700) at pthread_create.c:333
#9  0x00007fcb2d7d62dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7fcb16be4700 (LWP 21513)):
#0  0x00007fcb2d7ca5ad in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fcb2a67131c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fcb2a67142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fcb2e3f94ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fcb2e3a215a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fcb2e1cbf94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fcb30352dc5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007fcb2e1d0da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fcb2c5976fa in start_thread (arg=0x7fcb16be4700) at pthread_create.c:333
#9  0x00007fcb2d7d62dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7fcb0e370700 (LWP 21514)):
#0  0x00007fcb2d7ca5ad in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fcb2a67131c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fcb2a67142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fcb2e3f94ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fcb2e3a215a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fcb2e1cbf94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fcb2e1d0da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fcb2c5976fa in start_thread (arg=0x7fcb0e370700) at pthread_create.c:333
#8  0x00007fcb2d7d62dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7fcb0057c700 (LWP 21529)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fcb2e1d1c5b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007fcb3084dc4d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#3  0x00007fcb3084e525 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#4  0x00007fcb2e1d0da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fcb2c5976fa in start_thread (arg=0x7fcb0057c700) at pthread_create.c:333
#6  0x00007fcb2d7d62dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fcaff12e700 (LWP 21532)):
#0  0x00007fcb2a670b69 in g_main_context_query () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fcb2a671297 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fcb2a67142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fcb2e3f94ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fcb2e3a215a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fcb2e1cbf94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fcb2e1d0da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fcb2c5976fa in start_thread (arg=0x7fcaff12e700) at pthread_create.c:333
#8  0x00007fcb2d7d62dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fcafd904700 (LWP 21543)):
#0  0x00007fcb2a670d30 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fcb2a6712c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fcb2a67142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fcb2e3f94ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fcb2e3a215a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fcb2e1cbf94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fcb307dc8b6 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#7  0x00007fcb2e1d0da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fcb2c5976fa in start_thread (arg=0x7fcafd904700) at pthread_create.c:333
#9  0x00007fcb2d7d62dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fcb235c88c0 (LWP 21510)):
[KCrash Handler]
#6  UpdateItem::setProgress (this=this@entry=0x0, progress=progress@entry=0) at /home/me/src/git/discover/libdiscover/UpdateModel/UpdateItem.cpp:228
#7  0x00007fcb304a7750 in UpdateModel::resourceHasProgressed (this=0x47b39f0, res=<optimized out>, progress=0) at /home/me/src/git/discover/libdiscover/UpdateModel/UpdateModel.cpp:82
#8  0x00007fcb2e3d0d3e in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fcb304bca4c in ResourcesUpdatesModel::resourceProgressed (this=<optimized out>, _t1=0x28b0ad0, _t2=0) at /home/me/src/git/discover/obj-x86_64-linux-gnu/libdiscover/moc_ResourcesUpdatesModel.cpp:372
#10 0x00007fcb2e3d0d3e in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007fcb304bc5fc in AbstractBackendUpdater::resourceProgressed (this=this@entry=0x1170460, _t1=0x28b0ad0, _t2=0) at /home/me/src/git/discover/obj-x86_64-linux-gnu/libdiscover/moc_AbstractBackendUpdater.cpp:332
#12 0x00007fcb01664d39 in PackageKitUpdater::itemProgress (this=0x1170460, itemID=..., percentage=0) at /home/me/src/git/discover/libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp:323
#13 0x00007fcb2e3d0d3e in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007fcb0141e534 in PackageKit::Transaction::itemProgress(QString const&, PackageKit::Transaction::Status, unsigned int) () from /usr/lib/x86_64-linux-gnu/libpackagekitqt5.so.0
#15 0x00007fcb01420c89 in ?? () from /usr/lib/x86_64-linux-gnu/libpackagekitqt5.so.0
#16 0x00007fcb2e3d0a00 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#17 0x00007fcb0142d254 in OrgFreedesktopPackageKitTransactionInterface::ItemProgress(QString const&, unsigned int, unsigned int) () from /usr/lib/x86_64-linux-gnu/libpackagekitqt5.so.0
#18 0x00007fcb0142db06 in ?? () from /usr/lib/x86_64-linux-gnu/libpackagekitqt5.so.0
#19 0x00007fcb0142fdc8 in OrgFreedesktopPackageKitTransactionInterface::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/x86_64-linux-gnu/libpackagekitqt5.so.0
#20 0x00007fcb2b631f63 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#21 0x00007fcb2e3d1839 in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x00007fcb2ecd71dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#23 0x00007fcb2ecdc446 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#24 0x00007fcb2e3a43d8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#25 0x00007fcb2e3a629a in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007fcb2e3f9083 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#27 0x00007fcb2a671127 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007fcb2a671380 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007fcb2a67142c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007fcb2e3f948f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#31 0x00007fcb2e3a215a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#32 0x00007fcb2e3aa81c in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#33 0x00000000004098f8 in main (argc=1, argv=<optimized out>) at /home/me/src/git/discover/discover/main.cpp:115

Reported using DrKonqi
Comment 1 Aleix Pol 2016-04-14 14:13:11 UTC
Git commit 1cbd9a7ffdd232a2b9dcc3171b9b258238babfd5 by Aleix Pol.
Committed on 14/04/2016 at 14:12.
Pushed by apol into branch 'master'.

Mark as fetching when updates are being downloaded

M  +10   -2    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

http://commits.kde.org/discover/1cbd9a7ffdd232a2b9dcc3171b9b258238babfd5