Mark as fetching when updates are being downloaded

BUG: 361758